Locally working fine and fixed properly with JWT Security and API Controller